13.09.2019
==========
hcxessidtool: added new option
--essidout=<file>      : output ESSID list


12.09.2019
==========
removed     : wlanhcx2essid (deprecated)
added       : hcxessidtool
options:
-e <essid>  : filter by ESSID
-E <essid>  : filter by part of ESSID
-l <essid>  : filter by ESSID length
-h          : show this help
-v          : show version

--pmkid1=<file>        : input PMKID file 1
--pmkid2=<file>        : input PMKID file 2
--pmkidout12=<file>    : output only lines present in both PMKID file 1 and PMKID file 2
--pmkidout1=<file>     : output only lines present in PMKID file 1
--pmkidout2=<file>     : output only lines present in PMKID file 2
--pmkidout=<file>      : output only ESSID filtered lines present in PMKID file 1
--hccapx1=<file>       : input HCCAPX file 1
--hccapx2=<file>       : input HCCAPX file 2
--hccapxout12=<file>   : output only lines present in both HCCAPX file 1 and HCCAPX file 2
--hccapxout1=<file>    : output only lines present in HCCAPX file1
--hccapxout2=<file>    : output only lines present in HCCAPX file 2
--hccapxout=<file>     : output only ESSID filtered lines present in HCCAPX file 1
--help                 : show this help
--version              : show version

Main purpose is to get full adcantage or reuse of PBKDF2
while merging (only) the same ESSIDs from different hash files
examples:
hcxessidtool --pmkid1=file1.16800 --pmkid2=file2.16800 --pmkidout12=joint.16800
hcxessidtool --pmkid1=file1.16800 -l 10 --pmkidout=filtered.16800


03.09.2019
==========
move to v5.2.2
fixed bug in damaged ESSID handling


01.09.2019
==========
hcxpcaptool: show capture device vendor


28.08.2019
==========
moved to v5.2.1
hcxpsktool : added new weak candidates
hcxdumptool: added additional warnings about handling of pcapng files ( im
             imrpoved status out: count zeroed PMKIDs


19.08.2019
==========
move to v5.2.0


11.08.2019
==========
hcxpcaptool: print time of first packet and time of last packet